--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "meu primeiro programa node js",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "start": "npm run lite",
+ "test": "echo \"Error: no test specified\" && exit 1",
+ "lite": "lite-server" 
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Vargas-rgb/git-test/issues"
   },
-  "homepage": "https://github.com/Vargas-rgb/git-test#readme"
+  "homepage": "https://github.com/Vargas-rgb/git-test#readme",
+  "devDependencies": {
+    "lite-server": "^2.6.1"
+  }
 }
